[package]
name = "elblogs"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"

[dependencies]
recap = "0.1"
futures = "0.1"
chrono = "0.4"
rusoto_s3 = "0.37"
rusoto_core = "0.37"
structopt = "0.2"
tokio = "0.1"
lazy_static = "1.3"
flate2 = { version = "1.0", features = ["tokio"]  }
serde = { version = "1.0", features = ["derive"]}