[package]
name = "elblogs"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
flate2 = { version = "1.0", features = ["tokio"]  }
futures = "0.1"
lazy_static = "1.3"
recap = "0.1"
rusoto_core = "0.38"
rusoto_s3 = "0.38"
serde = { version = "1.0", features = ["derive"]}
structopt = "0.2"
tokio = "0.1"

[dev-dependencies]
serde_json = "1.0"